# Synth

./: CMakeLists.txt  README.md  build.sh  watch.sh
backup_src/: main.c  synth.c  synth.h
src/: gui.c  gui.h  gui_draw.c  gui_draw.h  imnodes.cpp  imnodes_internal.h  main.c  main.cpp  render.h  synth.c  synth.cpp  synth.h  synth.hpp  termg.c  things.h  typedefs.h  util.c  util.h
src/ggui/: ggui.c  ggui.h  gui_shaders.h
